firebase reaction feature working

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "satellite-solstice",
   "version": "0.0.1",
-
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -20,6 +19,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.5.2",
+    "firebase": "^11.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
